# ACTSTracking

./: CMakeLists.txt  README.md
ACTSTracking/: .ACTSAlgBase.hxx.swp  .ACTSDuplicateRemoval.hxx.swp  .ACTSSeededCKFTrackingAlg.hxx.swp  .Helpers.hxx.swp  ACTSAlgBase.hxx  ACTSDuplicateRemoval.hxx  ACTSMergeCollections.hxx  ACTSMergeHitCollections.hxx  ACTSMergeRelationCollections.hxx  ACTSProcBase.hxx  ACTSSeededCKFTrackingAlg.hxx  ACTSSeededCKFTrackingProc.hxx  ACTSTruthCKFTrackingAlg.hxx  ACTSTruthCKFTrackingProc.hxx  ACTSTruthTrackingAlg.hxx  ACTSTruthTrackingProc.hxx  BitField64.hxx  CellIDDecoder.hxx  FilterTracksAlg.hxx  GeometryContainers.hxx  GeometryIdMappingTool.hxx  GeometryIdSelector.hxx  Helpers.hxx  Measurement.hxx  MeasurementCalibrator.hxx  SeedSpacePoint.hxx  SourceLink.hxx  TrackTruthAlg.hxx
data/: CMakeLists.txt  MAIA_v0.root  MAIA_v0_material.json  Makefile  MuSIC_v1.json
example/: Makefile
src/: .ACTSAlgBase.cxx.swp  .Helpers.cxx.swp  .TrackTruthAlg.cxx.swp  ACTSAlgBase.cxx  ACTSDuplicateRemoval.cxx  ACTSMergeCollections.cxx  ACTSMergeHitCollections.cxx  ACTSMergeRelationCollections.cxx  ACTSProcBase.cxx  ACTSSeededCKFTrackingAlg.cxx  ACTSSeededCKFTrackingProc.cxx  ACTSTruthCKFTrackingProc.cxx  ACTSTruthTrackingAlg.cxx  ACTSTruthTrackingProc.cxx  BitField64.cxx  FilterTracksAlg.cxx  GeometryIdMappingTool.cxx  Helpers.cxx  TrackTruthAlg.cxx  TrackTruthProc.cxx
